# housing-projections

./: .env.example  .gitignore  CLAUDE.md  PLAN_CLI_REPORT.md  README.md  WORKPLAN.md  pyproject.toml
checks/housing-projections/: audit-2026-07-14.md
docs/: az-ess-diagnosis.md  az-family-work-plan.md  az3-full-dataset-report-method.md  az3-report-review-plan.md  az3-stakeholder-summary.md  ess-rhat-diagnostic-guide.md  estimates-dashboard-report-plan.md  model-evaluation-methods.md  model-finalization-work-plan.md  model-progression-notes.md  model-stopping-criteria-and-communication.md  multimodality-characterization-guide.md  multimodality-diagnostic-pipeline.md
notebooks/: 0.1-sd-james_cut.py  0.2-sd-eda.py  1.0-sd-bayesian_interpolation.py  1.1-sd-bayesian_spike_slab.py  1.2-sd-inference.py  2.0-sd-model_comparison.py  3.0-sd-trace_diagnostics.py  4.0-sd-pe_disagreement.py  5.0-sd-model_iteration.py  6.0-sd-quick_diagnostics.py  7.0-sd-trace_browser.py  8.0-cd-az3_estimates_dashboard.py  get_applications_api.py  sd-0.1-james_cut.py  sd-0.1-permissions_eda.py
results/artifacts/az3_year_estimates/: README.md  area_scenarios.csv  area_tier_summary.csv  area_year_estimates.csv  borough_boundaries.geojson  borough_london_totals.csv
scripts/: az3_deep_dive_followups.py  az3_year_estimates.py  build_dashboard.py  export_borough_boundaries.py  export_stakeholder_pdf.py  full_dataset_characterization.py  kfold_comparison.py
src/housing_projections/: __init__.py  analysis.py  cli.py  config.py  data.py  diagnostics.py  html_report.py  load.py  multimodality.py  outliers.py  plots.py  reporting.py  sampling.py  sensitivity.py  spatial.py
src/housing_projections/eda/: __init__.py  agreement.py  comparison.py  spatial.py  timeseries.py
src/housing_projections/models/: __init__.py  az_family.py  base.py  builders.py  m_family.py  models.py
src/housing_projections/plots/: __init__.py  core.py  model.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_data.py  test_diagnostics.py  test_eda.py  test_html_report.py  test_models.py  test_multimodality.py  test_outliers.py  test_reporting.py  test_sensitivity.py  test_spatial.py
