[project]
name = "housing-projections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sadhbh Dempsey", email = "conor.dempsey@london.gov.uk" }
]
requires-python = ">=3.11.9"
dependencies = [
    "boto3>=1.42.39",
    "elasticsearch>=9.3.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
]

[project.scripts]
housing-projections = "housing_projections:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
