[project]
name = "housing-projections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sadhbh Dempsey", email = "conor.dempsey@london.gov.uk" }
]
requires-python = ">=3.12.9"
dependencies = [
    "altair>=5.4",
    "boto3>=1.42.39",
    "elasticsearch>=8.3.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2", "ruff>=0.15.20,<0.16", "mypy>=2.1.0,<3", "marimo>=0.23.4,<0.24", "pymc-extras>=0.12.1,<0.13",
]

[project.scripts]
housing-projections = "housing_projections.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short -m 'not slow'"
markers   = ["slow: marks tests that run sampling (deselected by default)"]

[tool.pixi.tasks]
test          = "pytest"
lint          = "ruff check src/housing_projections tests"
typecheck     = "mypy src/housing_projections"
run-models    = "housing-projections run-models"
compare       = "housing-projections compare"
diagnose      = "housing-projections diagnose"
multimodality = "housing-projections check-multimodality"
report        = "housing-projections report"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "BLE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# html_report.py uses broad Exception catches intentionally — plots must not crash the report
"src/housing_projections/html_report.py" = ["BLE001", "F401", "F841", "UP032"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.marimo.runtime]
# Auto-reload imported housing_projections modules (e.g. new model classes
# added to models.py) without needing a manual kernel restart — notebooks
# like 7.0-sd-trace_browser.py import housing_projections.models once at
# startup, and without this, editing models.py externally leaves the
# running kernel with a stale copy of the module.
auto_reload = "autorun"

[tool.pixi.dependencies]
fiona = ">=1.9" 
pysal = "*"

nomkl = "*"
blas = { version = "*", build = "*openblas*" }
libblas = { version = "*", build = "*openblas*" }
liblapack = { version = "*", build = "*openblas*" }
llvm-openmp = "*"
nutpie = ">=0.16.10,<0.17"

[tool.pixi.pypi-dependencies]
pld-database-live = { git = "https://github.com/JamesB686/pld_database_live", branch = "fix-pyproject-dependencies" }
housing_projections = { path = ".", editable = true }
gla_data = ">=0.1.1"
pymc = "*"
arviz = "*"
graphviz = "*"
pytest = "*"
